<resources>
    <string name="app_name">Assignment 3</string>
    <string name="animal_list">List of animals</string>
    <string name="add_animal">Add animal</string>
    <string name="personal_data">Personal data</string>
    <string name="animal_picture">Picture of an animal</string>
    <string name="animal_gender">Picture shows the gender of the animal</string>
    <string name="age_title">Age:</string>
    <string name="gender_title">Gender:</string>
    <string name="bat">Bat</string>
    <string name="bear">Bear</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="fox">Fox</string>
    <string name="gorilla" translatable="false">Gorilla</string>
    <string name="mouse">Mouse</string>
    <string name="panda" translatable="false">Panda</string>
    <string name="pig">Pig</string>
    <string name="rabbit">Rabbit</string>
    <string name="squirrel">Squirrel</string>
    <string name="tiger" translatable="false">Tiger</string>
    <string name="unicorn">Unicorn</string>
    <string name="wolf" translatable="false">Wolf</string>
    <string name="favorite_color_heading">What is your favorite animal?</string>
    <string name="name_hint">Enter your name</string>
    <string name="age_hint">Enter your age</string>
    <string name="color_hint">Enter your favorite color</string>
    <string name="submit">Submit</string>
    <string name="formatting_string">Hi %1$s! You are %2$s years old and your favorite color is %3$s.</string>
    <string name="err_empty">Error! Please fill in all textboxes.</string>
</resources>