<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/a_drawable"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/a_species"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/animal_picture" />

        <TextView
            android:id="@+id/a_species"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/a_drawable"
            app:layout_constraintStart_toEndOf="@+id/a_drawable"
            app:layout_constraintEnd_toStartOf="@+id/a_gender_title"
            app:layout_constraintBottom_toBottomOf="@+id/a_drawable"
            style="@style/ListTextStyle" />

        <TextView
            android:id="@+id/a_gender_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toTopOf="@id/a_drawable"
            app:layout_constraintEnd_toStartOf="@+id/a_gender"
            app:layout_constraintBottom_toTopOf="@+id/a_age_title"
            android:text="@string/gender_title" />

        <TextView
            android:id="@+id/a_age_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@+id/a_gender_title"
            app:layout_constraintStart_toStartOf="@+id/a_gender_title"
            app:layout_constraintBottom_toBottomOf="@id/a_drawable"
            android:text="@string/age_title" />

        <ImageView
            android:id="@+id/a_gender"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@+id/a_gender_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/a_gender_title"
            android:contentDescription="@string/animal_gender" />

        <TextView
            android:id="@+id/a_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@+id/a_age_title"
            app:layout_constraintStart_toStartOf="@+id/a_gender"
            app:layout_constraintEnd_toEndOf="@+id/a_gender"
            app:layout_constraintBottom_toBottomOf="@+id/a_age_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>